--- a/notebooks/data_preprocessing_script.ipynb
+++ b/notebooks/data_preprocessing_script.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,24 +52,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function adapted from `preprocess` function of lab 3 \n",
-    "# of this course (575 Advance Learning Machine)\n",
+    "# Function adapted from `preprocess` function shared by Varada\n",
+    "# in course 575 Advance Learning Machine\n",
     "\n",
     "def preprocess_comments(text, \n",
-    "               min_token_len = 2, \n",
-    "               irrelevant_pos = [#'PROPN', # erase proper names as 'George', but also words as orange or apple\n",
-    "                                 'PRON',\n",
-    "                                 'SPACE',\n",
-    "                                 'PUNCT', # as:  . , ; ... \" ? ! $\n",
-    "#                                  'DET', # commented since it removes 'no' which changes meaning of a sentence\n",
-    "                                 'ADV',   # removes words including 'why'\n",
-    "                                 'ADP',\n",
-    "                                 'CCONJ'\n",
-    "               ], avoid_entities = ['PERSON', 'ORG', 'LOC', 'GPE']): \n",
+    "                        min_token_len = 2, \n",
+    "                        irrelevant_pos = ['PRON', 'SPACE', 'PUNCT', 'ADV', \n",
+    "                                          'ADP', 'CCONJ', 'AUX', 'PRP'],\n",
+    "                        avoid_entities = ['PERSON', 'ORG', 'LOC', 'GPE']):\n",
+    "# note: Didn't use the following options in the `preprocess_comments`...\n",
+    "#    - 'PROPN' because it erases proper names as 'George', but also words as orange.\n",
+    "#    - 'DET' since it removes the word 'no', which changes the meaning of a sentence.\n",
+    "# *for more information see link: https://universaldependencies.org/u/pos/\n",
     "    \"\"\"\n",
     "    Given text, min_token_len, irrelevant_pos and avoid_entities, carries out \n",
     "    preprocessing of the text and returns list of preprocessed text. \n",
@@ -96,15 +94,16 @@
     "                   \"Contact me at george23@gmail.com\"]\n",
     "\n",
     "    >>> preprocess(example)\n",
-    "    (output:) ['hello be love swimming', 'be good cook', 'contact']\n",
+    "    (output:) ['hello love swimming', 'good cook', 'contact']\n",
     "    \"\"\"\n",
     "\n",
     "    result = []\n",
     "    \n",
-    "    others = [\"'s\"]\n",
+    "    others = [\"'s\", \"the\", \"that\", \"this\", \"to\", \"-PRON-\"]\n",
+    "    # I add \"-PRON-\" that erase \"my\", \"your\", etc. other way to erase them is to\n",
+    "    #   use adding 'DET' to irrelevant_pos but it would erase the word 'no' too.\n",
     "    \n",
     "    for sent in text:\n",
-    "        \n",
     "        sent = sent.lower()\n",
     "        sent = re.sub(r\"facebook\", \"social media\", sent)\n",
     "        sent = re.sub(r\"twitter\", \"social media\", sent)\n",
@@ -114,97 +113,95 @@
     "        sent = re.sub(r\"snapchat\", \"social media\", sent)\n",
     "        \n",
     "        result_sent = []\n",
-    "        \n",
     "        doc = nlp(sent)\n",
-    "        entities = [str(ent) for ent in doc.ents if ent.label_ in avoid_entities] # This helps to detect names of persons, of organization and dates\n",
+    "        entities = [str(ent) for ent in doc.ents if ent.label_ in avoid_entities]\n",
+    "        # This helps to detect names of persons, organization and dates\n",
     "        \n",
-    "        for token in doc:\n",
-    "#             print(token.pos_)\n",
-    "            \n",
+    "        for token in doc:            \n",
     "            if (token.like_email or\n",
     "                token.like_url or\n",
     "                token.pos_ in irrelevant_pos or\n",
-    "                str(token) in entities or       # removes names entities\n",
+    "                str(token) in entities or\n",
     "                str(token.lemma_) in others or\n",
     "                len(token) < min_token_len):\n",
     "                continue\n",
     "            else:\n",
-    "                result_sent.append(token.lemma_) # carries out lemmatization\n",
-    "    \n",
+    "                result_sent.append(token.lemma_)\n",
     "        result.append(\" \".join(result_sent))\n",
-    "        \n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus = [\"Why I got this information from Facebook today\", \"News from Whatsapp isn't reliable\",\n",
+    "example_1 = [\"Why I got this information from Facebook today?\", \"News from Whatsapp isn't reliable\",\n",
     "          \"Do you eat apples?\", \"Apple is a profitable company\", \n",
     "          \"Twitter is a great source of information!!!\",\n",
-    "          \"Victor's computer's are great!!\", \"Isn't it a great day, Bob? I loved the movie and spending time with you.\", \n",
+    "          \"Sukriti, Carlina, Victor and Karan, are a great team!\", \"Steve's computer's are great!!\",\n",
+    "          \"Isn't it a great day, Bob? I loved the movie and spending time with you.\", \n",
     "          \"The sky is not always blue underneath. Remember that.\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['get this information social medium today',\n",
-       " 'news social medium be not reliable',\n",
-       " 'do eat apple',\n",
-       " 'be profitable company',\n",
-       " 'social media be great source information',\n",
-       " 'computer be great',\n",
-       " 'be not great day love the movie spending time',\n",
-       " 'the be not blue remember that']"
+       "['get information social medium today',\n",
+       " 'news social medium not reliable',\n",
+       " 'eat apple',\n",
+       " 'profitable company',\n",
+       " 'social media great source information',\n",
+       " 'great team',\n",
+       " 'computer great',\n",
+       " 'not great day love movie spending time',\n",
+       " 'not blue remember']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "preprocess_comments(corpus)"
+    "preprocess_comments(example_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "example = [\"Hello, I'm George and I love swimming!\",\n",
+    "example_2 = [\"Hello, I'm George and I love swimming!\",\n",
     "                   \"I am a really good cook; what about you?\",\n",
     "                   \"Contact me at george23@gmail.com\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['hello be love swimming', 'be good cook', 'contact']"
+       "['hello love swimming', 'good cook', 'contact']"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "preprocess_comments(example)"
+    "preprocess_comments(example_2)"
    ]
   },
   {
